--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.15.0
-  firebase_auth: ^4.7.2
-  cloud_firestore: ^4.8.4
-  firebase_storage: ^11.2.5
-  firebase_database: ^10.2.5
-
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
   intl: ^0.19.0
+
+#  firebase_core: ^2.15.0
+#  firebase_auth: ^4.7.2
+#  cloud_firestore: ^4.8.4
+#  firebase_storage: ^11.2.5
+#  firebase_database: ^10.2.5
+
+#  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +57,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
